HTML add-form and python-MySQL learning

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
             <span title="number">学号</span>
             <span title="phone">手机号码</span>
         </li>
-        <li class="inf" id="inf1">
+        <li class="inf">
             <span title="name">asd</span>
             <input type="text" name="name" placeholder="姓名" />
             <span title="number">U201513488</span>
@@ -26,7 +26,7 @@
 
             <div class="operation"><div class="edit inline-block"></div><div class="save inline-block"></div><div class="delete inline-block"></div></div>
         </li>
-        <li class="inf alt" id="inf2">
+        <li class="inf alt">
             <span title="name">zxc</span>
             <input type="text" name="name" placeholder="姓名" />
             <span title="number">U201513419</span>
@@ -36,7 +36,7 @@
 
             <div class="operation"><div class="edit inline-block"></div><div class="save inline-block"></div><div class="delete inline-block"></div></div>
         </li>
-        <li class="inf" id="inf3">
+        <li class="inf">
             <span title="name">qwe</span>
             <input type="text" name="name" placeholder="姓名" />
             <span title="number">U201513488</span>
@@ -48,12 +48,16 @@
         </li>
     </ul>
 
+    <form name="addInf" id="add-inf-form">
+        <div class="close"></div>
+        <input type="text" name="name" placeholder="姓名">
+        <input type="text" name="number" placeholder="学号">
+        <input type="text" name="phone" placeholder="手机">
+        <input type="submit" value="添加" id="submitInfo">
+    </form>
+
 
     <script type="text/javascript" src="index.js"></script>
-
-
-
-
 
 </body>
 
